stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_recursion_predeclaration_policy.snap
---
source: tests/fixtures.rs
assertion_line: 5684
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_recursion_predeclaration_policy.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
direct annotated:predeclare:self recursion ok;annotated mutual:predeclare:later annotated visible;annotated to unannotated:predeclare:unannotated group seeded;partial missing return:predeclare:partial group seeded;partial missing param:predeclare:partial group seeded;unannotated forward:top-down:future values hidden
stderr:
<empty>
