stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_rename_expr.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_rename_expr.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
let x$1 = input; println(x$1)
stderr:
<empty>
