stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_solver_worklist.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_solver_worklist.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Int != String; Bool != c
stderr:
<empty>
