stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_source_scanner.snap
---
source: tests/fixtures.rs
assertion_line: 4999
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_source_scanner.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
1
1
2
1
5
stderr:
<empty>
