stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_type_render.snap
---
source: tests/fixtures.rs
assertion_line: 1335
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_type_render.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
List<token> -> String
stderr:
<empty>
