stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_type_shape_solver.snap
---
source: tests/fixtures.rs
assertion_line: 1597
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_type_shape_solver.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
Function:inferred types do not match String vs i64;tuple shapes do not match;called value is not a function;inferred types do not match String vs Bool
stderr:
<empty>
