stage0/tests/snapshots/program__tests_fixtures_programs_basic_compiler_like_unify.snap
---
source: tests/fixtures.rs
assertion_line: 1422
expression: transcript
---
fixture: tests/fixtures/programs/basic/compiler_like_unify.ml

compile:
status: success
stdout:
<empty>
stderr:
<empty>

run:
status: success
stdout:
cannot unify Int with String; cannot unify String with Bool
stderr:
<empty>
